added new GetAll Routes
