# controllers/projectallocation.go
@@ -4,6 +4,12 @@ import (
 	"github.com/astaxie/beego"
 	"encoding/json"
 	"CollegeMis/models"
+
+	"strings"
+	"errors"
+	"github.com/astaxie/beego/orm"
+	"strconv"
+	"fmt"
 )
 
 
@@ -49,4 +55,97 @@ func(dd *ProjectAllController) Get(){
 	d := a.GetAllProjAllocation()
 	dd.Data["json"] = d
 	dd.ServeJSON()
+}
+
+type ProjectSAllController struct{
+	beego.Controller
+}
+
+// GetAll ...
+// @Title Get All
+// @Description get ProjectAllocation
+// @Param	query	query	string	false	"Filter. e.g. col1:v1,col2:v2 ..."
+// @Param	fields	query	string	false	"Fields returned. e.g. col1,col2 ..."
+// @Param	sortby	query	string	false	"Sorted-by fields. e.g. col1,col2 ..."
+// @Param	order	query	string	false	"Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ..."
+// @Param	limit	query	string	false	"Limit the size of result set. Must be an integer"
+// @Param	offset	query	string	false	"Start position of result set. Must be an integer"
+// @Success 200 {object} models.ProjectAllocation
+// @Failure 403
+// @router / [get]
+func (c *ProjectSAllController) GetAll() {
+	var fields []string
+	var sortby []string
+	var order []string
+	var query = make(map[string]string)
+	var limit int64 = 10
+	var offset int64
+
+	// fields: col1,col2,entity.col3
+	if v := c.GetString("fields"); v != "" {
+		fields = strings.Split(v, ",")
+	}
+	// limit: 10 (default is 10)
+	if v, err := c.GetInt64("limit"); err == nil {
+		limit = v
+	}
+	// offset: 0 (default is 0)
+	if v, err := c.GetInt64("offset"); err == nil {
+		offset = v
+	}
+	// sortby: col1,col2
+	if v := c.GetString("sortby"); v != "" {
+		sortby = strings.Split(v, ",")
+	}
+	// order: desc,asc
+	if v := c.GetString("order"); v != "" {
+		order = strings.Split(v, ",")
+	}
+	// query: k:v,k:v
+	if v := c.GetString("query"); v != "" {
+		for _, cond := range strings.Split(v, ",") {
+			kv := strings.SplitN(cond, ":", 2)
+			if len(kv) != 2 {
+				c.Data["json"] = errors.New("Error: invalid query key/value pair")
+				c.ServeJSON()
+				return
+			}
+			k, v := kv[0], kv[1]
+			query[k] = v
+		}
+	}
+
+	l, err := models.GetAllProjectAllocation(query, fields, sortby, order, offset, limit)
+	if err != nil {
+		c.Data["json"] = err.Error()
+	} else {
+		c.Data["json"] = l
+	}
+	c.ServeJSON()
+}
+
+type ProjectDeleteController struct{
+	beego.Controller
+}
+
+// @Title Delete
+// @Description delete the projectallocation
+// @Param	Paid		path 	string	true		"The Paid you want to delete"
+// @Success 200 {string} delete success!
+// @Failure 403 Paid is empty
+// @router /:Paid [delete]
+func (this *ProjectDeleteController) Delete(){
+	o := orm.NewOrm()
+	Paid, _ := strconv.Atoi(this.Ctx.Input.Param(":Paid"))
+			ProjectD := &models.ProjectAllocation{Paid:Paid}
+			
+			
+			if num, err := o.Delete(ProjectD); err == nil {
+				fmt.Println(num)
+				fmt.Println(num)
+				this.Data["json"] = "Deleted"
+			}
+	
+		this.ServeJSON()
+
 }
